[package]
name = "rs_token"
version = "0.1.0"
edition = "2021"
description = "crate that provides a JWT token, with the ability to renew itself, in a transparent way"
license = "MIT OR Apache-2.0"
repository = "https://github.com/OkieOth/rs_token"


[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
