[package]
name = "simple_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.20"
rand = "0.8.5"
rs_token = { path = "../../rs_token"}
tokio = { version = "1.29.1", features = ["full"] }
